code25_all/scala/9892976.txt
scala> def a : (Int, Int) => Int = {(s:Int, t:Int) => s + t}
a: (Int, Int) => Int

scala> a
res15: (Int, Int) => Int = <function2>

scala> def b(s:Int, t:Int) : Int = s+t
b: (s: Int, t: Int)Int

scala> b
<console>:9: error: missing arguments for method b in object $iw;
follow this method with `_' if you want to treat it as a partially applied function
              b
              ^

scala> b(3,4)
res17: Int = 7

scala> a(3,4)
res18: Int = 7

